Added a button, and updated styles.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
           </p>
         </section>
 
+        <div class="retailer-login-row">
+          <a class="login-btn" href="https://example.com/login" target="_blank" rel="noopener noreferrer">Retailer Login</a>
+        </div>
+
+
         <section class="wholesale-section" aria-labelledby="wholesale-section-title">
           <h2 id="wholesale-section-title">Built for Bridal Retailers &amp; Boutiques</h2>
           <p>
