Udated for all devices.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <header>
         <div class="brand">Faith &amp; Love Bridal</div>
-        <a class="login-btn" href="https://example.com/login" target="_blank" rel="noopener noreferrer">Retailer Login</a>
+        <a class="login-btn header-login" href="https://example.com/login" target="_blank" rel="noopener noreferrer">Retailer Login</a>
       </header>
 
       <main>
@@ -25,7 +25,7 @@
         </section>
 
         <div class="retailer-login-row">
-          <a class="login-btn" href="https://example.com/login" target="_blank" rel="noopener noreferrer">Retailer Login</a>
+          <a class="login-btn mobile-login" href="https://example.com/login" target="_blank" rel="noopener noreferrer">Retailer Login</a>
         </div>
 
 
